# hermes-flow-server

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  Dockerfile  Dockerfile.prod  README.md  bt1  config.prod.toml  config.toml  docker-compose.yml  program.c  start_stream.ps1
.devcontainer/: devcontainer.json
cmake/: aws-client-sigv4.cmake  dependencies.cmake
src/: CMakeLists.txt  main.cpp
src/app/: main.cpp
src/core/config/: Concepts.hpp  Config.cpp  Config.hpp  Types.hpp  config.cpp  config.hpp  types.hpp
src/core/graph/: AudioExecutor.cpp  AudioExecutor.hpp  Node.cpp  Node.hpp  NodeFactory.hpp  NodeRegistry.cpp  NodeRegistry.hpp  Nodes.cpp  Nodes.hpp  bruhhAudioExecutor.hpp  bruhhNodes.cpp  bruhhNodes.hpp
src/core/graph/nodes/: AsyncAudioSource.cpp  AsyncAudioSource.hpp  BasicNodes.hpp  ClientsNode.cpp  ClientsNode.hpp  DelayNode.cpp  DelayNode.hpp  FileInputNode.cpp  FileInputNode.hpp  FileOptionsNode.cpp  FileOptionsNode.hpp  MixerNode.cpp  MixerNode.hpp
src/core/session/: ActiveSessions.cpp  ActiveSessions.hpp  ISessionObserver.hpp  Session.cpp  Session.hpp
src/infra/audio/: Alaw.cpp  Alaw.hpp  AudioMath.hpp  CodecStrategy.hpp  DoubleBuffer.cpp  DoubleBuffer.hpp  PcmCast.hpp  PitchShifter.cpp  PitchShifter.h  PitchShifter.hpp  WavUtils.hpp  alaw.cpp  alaw.hpp
src/infra/crypto/: EncryptionStrategy.cpp  EncryptionStrategy.hpp
src/infra/io/: AsyncBufferController.cpp  AsyncBufferController.hpp  FileSink.hpp  IoContextPool.cpp  IoContextPool.hpp  PartialFileGuard.hpp  io_context_pool.cpp  io_context_pool.hpp
src/infra/parsers/: Json2Graph.cpp  Json2Graph.hpp  JsonUtils.hpp  response_builder.hpp
src/models/: CMakeLists.txt  Nodes.hpp  response_builder.hpp
src/network/http/: HttpSession.cpp  HttpSession.hpp  HttpStreamer.hpp  Listener.cpp  Listener.hpp  PrometheusWriter.hpp  Router.cpp  Router.hpp  Server.cpp  Server.hpp  http_session.cpp  http_session.hpp
src/network/rtp/: Packet.cpp  Packet.hpp  PacketUtils.hpp  RTPPacketizer.cpp  RTPPacketizer.hpp  RTPStreamer.cpp  RTPStreamer.hpp  RTPTransmitter.cpp  RTPTransmitter.hpp  packet.cpp  packet.hpp
src/network/s3/: AwsSigner.cpp  AwsSigner.hpp  BufferPool.hpp  S3Client.cpp  S3Client.hpp  S3RequestFactory.cpp  S3RequestFactory.hpp  S3Session.cpp  S3Session.hpp
src/network/websocket/: WebSocketSession.cpp  WebSocketSession.hpp  WebSocketSessionObserver.hpp
src/server/: ActiveSessions.cpp  ActiveSessions.hpp  CMakeLists.txt  Listener.cpp  Listener.hpp  RTPTransmitter.cpp  RTPTransmitter.hpp  Router.cpp  Router.hpp  Server.cpp  Server.hpp  ServerContext.hpp  Session.cpp  Session.hpp  TransmitJob.hpp  WebSocket.hpp  http_session.cpp  http_session.hpp  io_context_pool.cpp  io_context_pool.hpp
src/tests/: exampleClient.py
src/utils/: CMakeLists.txt  DownloadSession.cpp  Json2Graph.cpp  Json2Graph.hpp  PacketUtils.hpp  PartialFileGuard.hpp  RTPPacketizer.hpp  S3Client.cpp  S3Client.hpp  S3RequestFactory.hpp  S3Session.cpp  S3Session.hpp  alaw.hpp  awssigv4.cpp  awssigv4.h  config.hpp  packet.hpp
